--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,16 @@
 body {
   margin: 50px;
-  font-size: 16px;
+  font-size: 20px;
   color: #333;
   font-family: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
-  line-height: 1.25;
+  line-height: 1.3;
+  width: 800px;
+  margin: 50px auto;
+}
+
+h1 {
+  font-size: 1.5em;
+  padding-top: 1em;
 }
 
 .intro {
@@ -14,4 +21,8 @@ body {
 
 a:hover {
   color: orange;
+}
+
+li {
+  margin-bottom: 0.5em;
 }
