add sample to each page

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>CoderDojo Berlin Projects</title>
+    <title>{{page.title_de}} – CoderDojo Berlin Projects</title>
     <link href="./styles.css" rel="stylesheet" />
   </head>
   <body>
@@ -14,5 +14,8 @@
     <div class="content">
     {{content}}
     <div>
+    <div class="footer">
+      <a target="_blank" href="{{page.sample}}">{{page.sample}}</a>
+    </div>
   </body>
 </html>
