--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 body {
-  margin: 50px;
   font-size: 20px;
   color: #333;
   font-family: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
@@ -10,7 +9,11 @@ body {
 
 h1 {
   font-size: 1.5em;
-  padding-top: 1em;
+  margin-top: 1em;
+}
+
+.content > h1 {
+  margin-top: 0;
 }
 
 .intro {
